# sipg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Makefile.win  README.md  RELEASE_NOTES_v2.0.2.md  RELEASE_SUMMARY.md  config.json  install.py  pyproject.toml  requirements.txt  setup.py  sipg.bat  sipg.py
sipg/: __init__.py  cli.py  config.py  core.py
tests/: __init__.py  test_config.py
