[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sipg"
version = "2.1.1"
description = "A professional command-line tool for searching IP addresses using Shodan API"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mahbob Alam", email = "emptymahbob@gmail.com"}
]
maintainers = [
    {name = "Mahbob Alam", email = "emptymahbob@gmail.com"}
]
keywords = ["shodan", "ip", "grabber", "security", "reconnaissance", "network", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "colorama>=0.4.4",
    "requests>=2.26.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/emptymahbob/sipg"
Documentation = "https://github.com/emptymahbob/sipg#readme"
Repository = "https://github.com/emptymahbob/sipg"
"Bug Tracker" = "https://github.com/emptymahbob/sipg/issues"

[project.scripts]
sipg = "sipg.cli:main"

[tool.setuptools_scm]
write_to = "sipg/_version.py"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=sipg",
    "--cov-report=term-missing",
    "--cov-report=html",
] 